MJ's Bootstrap and Hosting content...

--- a/bootstrap.html
+++ b/bootstrap.html
@@ -243,6 +243,45 @@ selector {
 				</section>
 
 				<section>
+					<h2>Cards</h2>
+					<p>Use this flexible and extensible content container to display images.</p>
+					<p>They replaced Bootstrap 3's old panels, wells, and thumbnails.</p>
+					<p>Wrap them as a deck to have them as separate yet similarly-sized.</p>
+					<iframe height='265' scrolling='no' src='//codepen.io/mjawili/embed/dMwVYg/?height=265&theme-id=0&default-tab=html,result&embed-version=2' frameborder='no' allowtransparency='true' allowfullscreen='true' style='width: 100%;'>See the Pen <a href='http://codepen.io/mjawili/pen/dMwVYg/'>Cards</a> by Mary Ann Jawili (<a href='http://codepen.io/mjawili'>@mjawili</a>) on <a href='http://codepen.io'>CodePen</a>.
+					</iframe>
+				</section>
+
+				<section>
+					<h2>Professional Bootstrap Examples</h2>
+					<ul>
+						<li><a href="http://www.newsweek.com" target="_blank">Newsweek</a></li>
+						<li><a href="https://www.nasa.gov" target="_new">Nasa</a></li>
+						<li><a href="http://www.vogue.com" target="_blank">Vogue</a></li>
+						<li><a href="https://www.lyft.com" target="_blank">Lyft</a></li>
+					</ul>
+				</section>
+
+				<section>
+					<h2>Font Awesome</h2>
+					<p>A font and CSS toolkit originally designed for Bootstrap.</p>
+					<p>Easily styled with just CSS and fully accessible.</p>
+					<p>Just add one line in your <code>head</code> to start using it.</p>
+					<iframe height='265' scrolling='no' src='//codepen.io/mjawili/embed/XKdEae/?height=265&theme-id=0&default-tab=html,result&embed-version=2' frameborder='no' allowtransparency='true' allowfullscreen='true' style='width: 100%;'>See the Pen <a href='http://codepen.io/mjawili/pen/XKdEae/'>Cards</a> by Mary Ann Jawili (<a href='http://codepen.io/mjawili'>@mjawili</a>) on <a href='http://codepen.io'>CodePen</a>.
+					</iframe>
+				</section>
+
+				<section>
+					<h2>Grid Review</h2>
+					<p>Copy content from earlier...</p>
+				</section>
+
+				<section>
+					<h2>Exercise!</h2>
+					<p>Create a gallery or portfolio of your work (or anything else that interests you).</p>
+					<p>Utilize a three-column grid layout and cards to organize your content.</p>
+				</section>
+
+				<section>
 					<h2>What is Boostrap?</h2>
 
 					<aside class="notes">
